# MyApplication

./: README.md  build.gradle  import-summary.txt  settings.gradle
Test/: CMakeLists.txt  build.gradle  proguard-rules.pro
Test/src/androidTest/java/com/wj/test/: ExampleInstrumentedTest.java
Test/src/main/: AndroidManifest.xml
Test/src/main/cpp/: wj-lib.c  wj-lib.h
Test/src/main/java/com/wj/test/: BottomNavigationViewActivity.java  BottomSheetDialogActivity.java  ConstraintLayoutActivity.java  DateAndTimeActivity.java  DrawerLayoutActivity.java  MainActivity.java  NavigationActivity.java  NavigationViewActivity.java  PaletteActivity.java  SpannableStringActivity.java
Test/src/main/java/com/wj/test/ObserverModel/: ChildObservable.java  ChildObserver.java  Observable.java  Observer.java
Test/src/main/java/com/wj/test/activity/: AnimationActivity.java  (+11 more)
Test/src/main/res/layout/: activity_animation.xml  activity_bottom_navigation_view.xml  activity_constraint_layout.xml  activity_custom_widget.xml  activity_date_and_time.xml  activity_drawer_layout.xml  activity_main.xml  activity_myview.xml  activity_navigation_view.xml  activity_palette.xml  activity_spannable_string.xml  app_bar_navigation_view.xml  badge.xml  content_navigation_view.xml  dialog_bottom_sheet.xml  nav_header_navigation_view.xml  spinner_simple_item.xml  view_compound.xml
Test/src/main/res/menu/: activity_navigation_view_drawer.xml  navigation.xml  navigation_view.xml
Test/src/main/res/values/: attrs.xml  strings.xml  styles.xml
Test/src/test/java/com/wj/test/: ExampleUnitTest.java
(+13 files in other folders)
